# tabprinter

./: Cargo.toml  README.md
examples/: basic_usage.rs  csv_usage.rs  custom_data.rs  data.csv  different_styles.rs  pagination.rs  sorting.rs
src/: lib.rs  tests.rs
